--- a/APPSCRIPT FILES/Index.html
+++ b/APPSCRIPT FILES/Index.html
@@ -950,6 +950,7 @@
 
 <body>
   <div id="toast-container"></div>
+  <?!= include('GasClient'); ?>
   <?!= include('AnimationsJs'); ?>
   <?!= include('NotificationsJs'); ?>
 
